# bom-studios

./: .gitignore  AGENTS.md  CLAUDE.md  HAPPY-BIRTHDAY-JEROEN.md  PLATFORM-SCAFFOLD-PLAN.md  README.md  package-lock.json
.claude/agents/: api-agent.md  pipeline-agent.md  portal-agent.md  website-agent.md
api/: .env.example  .gitignore  DEPLOY.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
api/middleware/: auth.py
api/models/: __init__.py  db.py  schemas.py
api/routers/: __init__.py  auth.py  clients.py  projects.py  videos.py  webhooks.py
api/services/: auth.py  email.py  google_drive.py  images.py  llm.py  video.py  voice.py
birthday-gift/: index.html  styles.css
course/: package-lock.json  package.json  tailwind.config.ts
course/app/: globals.css  layout.tsx  page.tsx
docs/: GOOGLE-DRIVE-SETUP.md  bom-studios-auto-pipeline.md  bom-studios-brand-kit.md  bom-studios-business-plan-v2.md  bom-studios-design-system.md  bom-studios-engine-spec.md  bom-studios-website-copy-improved.md  video-api-user-guide.md
engine/: ENGINE-PREVIEW.md  README.md  app.py  pyproject.toml
engine/core/: api.py
engine/ui/: layout.py  theme.py
engine/ui/components/: __init__.py  button.py  card.py  cost_badge.py  input.py  sidebar.py  status_badge.py  video_card.py
engine/ui/pages/: __init__.py  create_video.py  dashboard.py  library.py  projects.py  settings.py
skills/: SKILL Engine.md
skills/api-agent/: SKILL.md
skills/pipeline-agent/: SKILL Pipeline.md  SKILL.md
skills/portal-agent/: SKILL Portal.md  SKILL.md
skills/website-agent/: SKILL.md
website/: .gitignore  package-lock.json  package.json  tailwind.config.ts
(+35 files in other folders)
