[project]
name = "bom-engine"
version = "0.1.0"
description = "BOM Studios Engine - Desktop video production app"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "replicate>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
